kubernetes/apps/monitoring/prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: Grafana
spec:
  parentRefs:
  - name: web-gateway
    namespace: networking
  hostnames:
  - grafana.astxlab.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-stack-grafana
      port: 80
